--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: "Roboto", "Trebuchet MS", Arial, sans-serif;
+    color: black;
+  }
+
 .filters{
 display: flex;
 flex-direction: column;
@@ -19,7 +24,21 @@ margin-top: 10px;
     color: white;
     border-radius: 50%;
 }
-#container{
+
+
+footer {
     display: flex;
-    flex-direction: column;
+    margin-top: 50px;
+    padding: 35px 50px 60px 50px;
+    flex-wrap: wrap;
+    background-color: #202224;
+    color: white;
+    }
+  
+footer li {
+    list-style-type: none;
+    margin: 5px;
+    margin-left: 0;
+    color: white; 
 }
+
